# okta-analytics-dashboard

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  init-mongo.js  manage.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: deps.yml  django.yml  docker.yml
apps/: __init__.py
apps/analytics/: __init__.py  admin.py  apps.py  models.py  scheduler.py  signals.py  urls.py
apps/analytics/migrations/: 0001_initial.py  __init__.py
apps/analytics/serializers/: __init__.py  event_serializers.py  statistics_serializers.py
apps/analytics/services/: __init__.py  alert_statistics.py  device_app_statistics.py  event_service.py  event_simulation.py  forensic_events.py  login_statistics.py  metrics_optimized.py  metrics_service.py  user_statistics.py
apps/analytics/templatetags/: event_filters.py
apps/analytics/tests/: __init__.py
apps/analytics/utils/: __init__.py  cache_utils.py
apps/api/: __init__.py  serializers.py  urls.py  versioning.py  views.py
apps/authentication/: __init__.py
apps/monitoring/: __init__.py  api_views.py  urls.py  utils.py  views.py
apps/okta_integration/: apps.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: __init__.py  apps.py
core/context_processors/: __init__.py  security.py
core/services/: database.py  okta_client.py  okta_logs.py  okta_oauth.py  sample_data.py
infrastructure/: __init__.py
(+69 files in other folders)
