[project]
name = "okta-analytics-dashboard"
version = "0.1.0-alpha.1"
requires-python = ">=3.12"
description = "Okta Analytics Dashboard"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "Q"]
ignore = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_tests.py"]
addopts = "-ra"
